[gd_scene load_steps=2 format=3 uid="uid://cedco4m5xy05m"]

[ext_resource type="Script" uid="uid://begj0iwjkg7w3" path="res://src/ui/screens/battle/PreBattleUI.gd" id="1_script"]

[node name="PreBattle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="MainContent" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="MissionInfo" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DarkPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/MissionInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/MissionInfo/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Mission Info"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/MissionInfo/VBoxContainer"]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/MissionInfo/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="EnemyInfo" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DarkPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/EnemyInfo"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/EnemyInfo/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Enemy Forces"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/EnemyInfo/VBoxContainer"]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/LeftPanel/EnemyInfo/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CenterPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="BattlefieldPreview" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent/CenterPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DarkPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/CenterPanel/BattlefieldPreview"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MainContent/CenterPanel/BattlefieldPreview/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Battlefield Preview"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/MainContent/CenterPanel/BattlefieldPreview/VBoxContainer"]
layout_mode = 2

[node name="PreviewContent" type="Control" parent="MarginContainer/VBoxContainer/MainContent/CenterPanel/BattlefieldPreview/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="RightPanel" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="CrewSelection" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DarkPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/CrewSelection"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/CrewSelection/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Select Crew"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/CrewSelection/VBoxContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/CrewSelection/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Content" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/CrewSelection/VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DeploymentPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
theme_type_variation = &"DarkPanel"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/DeploymentPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/DeploymentPanel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Deployment"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/DeploymentPanel/VBoxContainer"]
layout_mode = 2

[node name="Content" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MainContent/RightPanel/DeploymentPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="FooterPanel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"DarkPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/FooterPanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/FooterPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="ConfirmButton" type="Button" parent="MarginContainer/VBoxContainer/FooterPanel/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Confirm Deployment"
